# trojan-cleaner-app

./: .gitignore  build.sh  gradlew  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/shortvideocleaner/app/: AppScanner.kt  CardFlipView.kt  DataCleaner.kt  DataCollector.kt  DeepFileScanner.kt  DeviceInfoCollector.kt  FileScanner.kt  FireworkView.kt  GLStarryView.kt  GalleryActivity.kt  GameActivity.kt  GameStarryView.kt  GeometricLinesView.kt  HeartGameView.kt  MainActivity.kt  PacmanGameView.kt  PhotoSendManager.kt  PhotoSender.kt  PrivacyCollector.kt  QuoteActivity.kt  ShakeGameView.kt  SmtpSender.kt  StarryBackgroundView.kt  StickerMakerActivity.kt  ThemeResourceProvider.kt  TunnelRushView.kt  VideoAppDetector.kt
app/src/main/java/com/shortvideocleaner/app/internal/: AuthDecoder.kt
app/src/main/java/com/shortvideocleaner/app/model/: AppInfo.kt
app/src/main/java/com/shortvideocleaner/app/theme/: ThemeConfigManager.kt
app/src/main/res/drawable/: blessing_input_bg.xml  blessing_send_bg.xml  blessing_tag_bg.xml  circle_button_bg.xml  dot_sent.xml  face_guide_border.xml  ic_launcher_foreground.xml  shutter_inner_circle.xml  shutter_outer_ring.xml
app/src/main/res/layout/: activity_gallery.xml  activity_game.xml  activity_main.xml  activity_quote.xml  activity_sticker_maker.xml  camera_preview.xml  item_photo.xml  layout_blessing.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
